WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25687
Missing check for valid function in V8 bindings for toString function for event listeners
https://bugs.webkit.org/show_bug.cgi?id=25687
Summary
Missing check for valid function in V8 bindings for toString function for eve...
Søren Gjesse
Reported
2009-05-11 05:01:27 PDT
If creating the function for the toString property on event listeners fails an empty handle is used for the SetHiddenValue call. See:
http://crbug.com/11734
.
Attachments
Patch to check for empty hadles.
(3.12 KB, patch)
2009-05-11 07:27 PDT
,
Søren Gjesse
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Søren Gjesse
Comment 1
2009-05-11 07:27:20 PDT
Created
attachment 30188
[details]
Patch to check for empty hadles.
Dimitri Glazkov (Google)
Comment 2
2009-05-11 09:13:33 PDT
Comment on
attachment 30188
[details]
Patch to check for empty hadles. r=me
Dimitri Glazkov (Google)
Comment 3
2009-05-12 08:54:58 PDT
Landed as
http://trac.webkit.org/changeset/43566
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug