2009-05-12  Soren Gjesse  <sgjesse@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25687
        Missing check for valid function in V8 bindings for toString function for event listeners.

        * bindings/v8/V8LazyEventListener.cpp:
        (WebCore::V8LazyEventListener::getWrappedListenerFunction): Added empty handle checks.

Canonical link: https://commits.webkit.org/35545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43566 268f45cc-cd09-0410-ab3c-d52691b4dbfc